[project]
name = "crypto-currency-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2021.10.8",
    "charset-normalizer==2.0.12",
    "click==8.1.1",
    "colorama==0.4.4",
    "flask==2.1.1",
    "idna==3.3",
    "itsdangerous==2.1.2",
    "jinja2==3.1.1",
    "markupsafe==2.1.1",
    "requests==2.27.1",
    "urllib3==1.26.9",
    "werkzeug==2.1.0",
]
